<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context=".IntroActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="700dp"
                android:background="@drawable/gradient_color_background">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="360dp"
                    android:layout_height="360dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.32"
                    app:srcCompat="@drawable/gradient_circle" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/ivWoman"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="8dp"
                    app:layout_constraintBottom_toBottomOf="@id/imageView"
                    app:layout_constraintEnd_toEndOf="@id/imageView"
                    app:layout_constraintStart_toStartOf="@id/imageView"
                    app:layout_constraintTop_toTopOf="@id/imageView"
                    app:shapeAppearanceOverlay="@style/roundedImageR"
                    app:strokeWidth="1dp"
                    tools:srcCompat="@drawable/woman" />

                <TextView
                    android:id="@+id/tvIntro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/watch_videos_in_virtual_reality"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="48sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ivWoman" />

                <TextView
                    android:id="@+id/tvSubIntro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/sub_intro"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvIntro" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@drawable/background_gradient_2">

                <androidx.appcompat.widget.AppCompatButton
                    style="@android:style/Widget.Button"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="32dp"
                    android:background="@drawable/btn_gradient"
                    android:text="@string/get_in"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>